# Chat

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/chat/: consumers.py  forms.py  routing.py  urls.py  views.py
core/chat/migrations/: 0001_initial.py
core/src/: routing.py  settings.py  urls.py
core/templates/: base.html  main.html  room.html
core/templates/registration/: login.html  register.html
