[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
channels = {extras = ["daphne"], version = "^4.0.0"}
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.5"
channels-redis = "^4.0.0"


[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.core.masonry.api"
